# Klein

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: KleinConfig.cmake.in
cmake/Modules/: FindEuclid.cmake
config/: KleinConfig.h.in
contents/meshes/: Cube.off  IcoSphere.ply
contents/shaders/: ColorMesh.frag  CookTorrance.frag  CookTorranceVColor.frag  Mesh.vert  MeshVColor.vert  Picking.frag  Primitive.frag  Primitive.vert  Unlit.frag  Unlit.vert  UnlitVColor.frag  UnlitVColor.vert  VertexColorMesh.frag  VertexColorMesh.vert  VertexColorPrimitive.frag  VertexColorPrimitive.vert
data/shader/: Depth.frag  Light.inc.frag  NoProj.vert  PBR.frag  PBR.inc.frag  PBR.vert  PBRInstanced.vert  PBRSolidWireframe.frag  PBRSolidWireframe.geom  PBRSolidWireframe.vert  ShadingSolidWireframe.geom  ShadingSolidWireframe.vert  ShadowMappingDepth.vert  SolidWireframe.inc.frag  SolidWireframe.inc.geom  SolidWireframeData.inc.glsl  Transform.inc.vert  Unlit.frag  Unlit.vert  UnlitSolidWireframe.frag  WBOITComposition.frag  WBOITTransparent.frag  common.inc.vert  light.inc.frag  pbr.frag  pbr.inc.frag  pbr.vert  pbrinstanced.vert  pbrsolidwireframe.frag  pbrsolidwireframe.geom  pbrsolidwireframe.inc.frag  pbrsolidwireframe.vert
examples/: CMakeLists.txt
examples/BasicWindow/: CMakeLists.txt  MainWindow.cpp  MainWindow.h
examples/CameraControl/: CMakeLists.txt  MainWindow.cpp  MainWindow.h
examples/Gizmo/: CMakeLists.txt  MainWindow.cpp  MainWindow.h
examples/ImGuiWindow/: CMakeLists.txt  MainWindow.cpp  MainWindow.h
examples/Instancing/: CMakeLists.txt  MainWindow.cpp  MainWindow.h
examples/OIT/: CMakeLists.txt  MainWindow.cpp  MainWindow.h
examples/PBR/: CMakeLists.txt  MainWindow.cpp  MainWindow.h
examples/ShadowMapping/: CMakeLists.txt  MainWindow.cpp  MainWindow.h
examples/VertexColor/: CMakeLists.txt  MainWindow.cpp  MainWindow.h
examples/Wireframe/: CMakeLists.txt  Main.cpp  MainWindow.cpp  MainWindow.h
examples/data/envmap/: brdfSmith.dds  outdoorDiffuseHDR.dds
include/Klein/Gui/: AbstractQt3DWindow.h  ImGuiDockSpace.h  ImGuiManager.h  ImGuiOutputWindow.h  ImGuiSceneGraphWindow.h
include/Klein/Input/: TrackballCameraController.h
include/Klein/Render/: BasePBRMaterial.h  BaseUnlitMaterial.h  BufferData.h  CheckerboardTextureImage.h  ColorRenderTarget.h  ConcreteLinesRenderer.h  ConcretePointsRenderer.h  DepthRenderTarget.h  DirectionalShadowCaster.h  DumbTextureImage.h  ForwardRenderingEffect.h  InstancedMesh.h  InstancedMeshRenderer.h  MeshGeometry.h  OffscreenRenderTarget.h  PBRInstancedMaterial.h  PBRMaterial.h  PBRSolidWireframeMaterial.h  ResourceManager.h  ShaderProgram.h  Transformation.h  UnlitInstancedMaterial.h  UnlitMaterial.h  UnlitSolidWireframeMaterial.h  WBOITMaterial.h
include/Klein/Util/: ColorPalette.h  Gizmo.h  RandomColorGenerator.h
src/: ArcballController.cpp  ArcballController.h  CMakeLists.txt  Camera.cpp  CameraController.cpp  CameraController.h  Color.cpp  Color.h  Common.h  GLWidget.cpp  GLWidget.h  Light.h  Logger.cpp  Main.cpp  MainWindow.cpp  MainWindow.h  Mesh.cpp  Mesh.h  MeshIO.cpp  OBJMeshIO.cpp  OBJMeshIO.h  OFFMeshIO.cpp  OFFMeshIO.h  PrimitiveNode.cpp  PrimitiveNode.h  ProcessPanel.cpp  ProcessPanel.h  ProcessWidget.cpp  ProcessWidget.h  PropertyWidget.cpp  PropertyWidget.h  RenderMeshNode.cpp  RenderMeshNode.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  SceneNode.cpp  SceneNode.h  UprightWidget.cpp  (+4 more)
src/Core/: Camera.cpp  Camera.h  Color.cpp  Color.h  Common.h  Component.cpp  Component.h  GLBuffer.cpp  GLBuffer.h  GeomBase.h  GeomIO.cpp  GeomIO.h  GraphicsComponent.cpp  GraphicsComponent.h  Light.h  Logger.cpp  Logger.h  Material.h  Mesh.cpp  Mesh.h  MeshIO.cpp  MeshIO.h  Message.h  OBJMeshIO.cpp  OBJMeshIO.h  OFFMeshIO.cpp  OFFMeshIO.h  ObjIO.cpp  ObjIO.h  OffIO.cpp  OffIO.h  PBRMeshGraphics.cpp  PBRMeshGraphics.h  PBRMeshVColorGraphics.cpp  PBRMeshVColorGraphics.h  PlyIO.cpp  PlyIO.h  PointCloud.cpp  PointCloud.h  PrimitiveGraphics.cpp  (+19 more)
src/Editor/: ArcballController.cpp  ArcballController.h  CameraController.cpp  CameraController.h  GLWidget.cpp  GLWidget.h  Main.cpp  MainWindow.cpp  MainWindow.h  ProcessPanel.cpp  ProcessPanel.h  ProcessWidget.cpp  ProcessWidget.h  PropertyWidget.cpp  PropertyWidget.h
src/Gui/: AbstractQt3DWindow.cpp  ImGuiDockSpace.cpp  ImGuiManager.cpp  ImGuiOutputWindow.cpp  ImGuiSceneGraphWindow.cpp
src/Input/: TrackballCameraController.cpp
src/Render/: BasePBRMaterial.cpp  BaseUnlitMaterial.cpp  CheckerboardTextureImage.cpp  ColorRenderTarget.cpp  ConcreteLinesRenderer.cpp  ConcretePointsRenderer.cpp  DepthRenderTarget.cpp  DirectionalShadowCaster.cpp  DumbTextureImage.cpp  ForwardRenderingEffect.cpp  InstancedMesh.cpp  InstancedMeshRenderer.cpp  MeshGeometry.cpp  OffscreenRenderTarget.cpp  PBRInstancedMaterial.cpp  PBRMaterial.cpp  PBRSolidWireframeMaterial.cpp  ResourceManager.cpp  UnlitInstancedMaterial.cpp  UnlitMaterial.cpp  UnlitSolidWireframeMaterial.cpp  WBOITMaterial.cpp
src/Util/: ColorPalette.cpp  Gizmo.cpp  RandomColorGenerator.cpp
src/Widget/: SaliencyWidget.cpp  SaliencyWidget.h
src/Widgets/: SaliencyWidget.cpp  SaliencyWidget.h
widgets/: SegmentWidget.cpp  SegmentWidget.h
