if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
    if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS 19.00)
        message(FATAL_ERROR "Require MSVC14 or higher")
    endif()
    add_compile_options("/std:c++latest")
    add_definitions(-D_HAS_AUTO_PTR_ETC)
elseif("{CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
    if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS 7.0)
        message(FATAL_ERROR "Require GCC 7.0 or higher")
    endif()
elseif("{CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
    if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS 3.9)
        message(FATAL_ERROR "Require Clang 3.9 or higher")
    endif()
endif()
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_AUTOMOC ON)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/${CONFIG})

find_package(Qt5Core REQUIRED)
find_package(Qt5Widgets REQUIRED)
find_package(Qt5Gui REQUIRED)
find_package(Eigen3 REQUIRED)
find_package(CGAL REQUIRED)
find_package(CGAL REQUIRED COMPONENTS CGAL_Core)
find_package(Euclid REQUIRED)
find_package(OpenCV REQUIRED core imgproc)

set(WITH_OPENMP TRUE CACHE BOOL "Enable OpenMP")
if (WITH_OPENMP)
    find_package(OpenMP)
    if (OPENMP_FOUND)
        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
        set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
    endif()
endif()

include(${CGAL_USE_FILE})

include_directories(${CGAL_INCLUDE_DIRS} ${EIGEN3_INCLUDE_DIR} ${Euclid_INCLUDE_DIRS} ${OpenCV_INCLUDE_DIRS})

add_definitions(-DQT_NO_KEYWORDS)

file(GLOB_RECURSE SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
file(GLOB_RECURSE HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
file(GLOB_RECURSE SHADERS ${CMAKE_SOURCE_DIR}/contents/shaders/*)
source_group("Shaders" FILES ${SHADERS})

add_executable(Klein ${SOURCES} ${HEADERS} ${SHADERS})
set_target_properties(Klein PROPERTIES COMPILE_FLAGS "/wd4819")

qt5_use_modules(Klein Core Widgets Gui)
target_link_libraries(Klein ${CGAL_LIBRARIES} ${OpenCV_LIBS})
